--- a/page.html
+++ b/page.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title><My Second Page/title>
+    <title><My Second Page</title>
   </head>
   <body>
     <h3>My Second Page.</h3>
