--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
   <title>My Home Page</title>
  </head>
 <body>
-  Hello Google Alalytics
+  <h3>Hello Google Alalytics</h3>
   <div>
     <a href='./page.html'>Go to Second Page</a>
   </div>
