--- a/page.html
+++ b/page.html
@@ -9,7 +9,7 @@
 
   gtag('config', 'G-MRHNFJXKYB');
 </script>
-    <title><My Second Page</title>
+    <title>My Second Page</title>
   </head>
   <body>
     <h3>My Second Page.</h3>
